[gd_scene load_steps=5 format=3 uid="uid://n64wnhxvm54y"]

[ext_resource type="Script" uid="uid://conekna1hlim3" path="res://Scripts/plataforma_quebrar.gd" id="1_fhuoe"]
[ext_resource type="Texture2D" uid="uid://cw37pexk0nbvm" path="res://icon.svg" id="1_pedud"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhuoe"]
size = Vector2(128, 97)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wc626"]
size = Vector2(128, 26)

[node name="plataforma_quebrar" type="Node2D"]
script = ExtResource("1_fhuoe")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 13)
scale = Vector2(1, 0.2)
texture = ExtResource("1_pedud")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -48.5)
shape = SubResource("RectangleShape2D_fhuoe")

[node name="RigidBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_wc626")

[node name="QuebrarTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="QuebrarTimer" to="." method="_on_quebrar_timer_timeout"]
